*Empty MediaWiki Message*

--- a/Ommen_(gemiente).mw
+++ b/Ommen_(gemiente).mw
@@ -8,8 +8,8 @@
 | öppervlakte = 182,01
 | öppervlakte laand = 180,00
 | öppervlakte water = 2,01
-| inwonners =  17.333
-| doatum inwonners = 1 mei 2014
+| inwonners =  17.630
+| doatum inwonners = 1 jannewaori 2019
 | dichtheid = 96
 | breedtegroad = 52/31/0/N
 | lengtegroad = 6/25/0/E
@@ -18,7 +18,7 @@
 | postkode = 7685, 7730-7739, 8145-8149
 | webstie = [http://www.ommen.nl www.ommen.nl]
 }}
-'''Ommen''' is n [[gemiente (bestuur)|gemiente]] in de [[Nederlaand]]se [[provinsie]] [[Oaveriessel|Aoveriessel]] in de laandstreek [[Sallaand]]. De eufdplaatse is [[Ommen (stad)|Ommen]]. De gemiente ad op [[1 mei]] [[2014]] 17.333 inwonners.<ref>[http://www.cbs.nl Centraal Bureau van de Statistiek]</ref>
+'''Ommen''' is n [[gemiente (bestuur)|gemiente]] in de [[Nederlaand]]se [[provinsie]] [[Oaveriessel|Aoveriessel]] in de laandstreek [[Sallaand]]. De eufdplaatse is [[Ommen (stad)|Ommen]]. De gemiente ad op [[1 mei|1 jannewaori 2019]] 17.630 inwonners.<ref>[http://www.cbs.nl Centraal Bureau van de Statistiek]</ref> De gemiente is daorum niet dichtbevolkt.
 
 ==Kernen==
 [[Bestaand:Gem-Ommen-OpenTopo.jpg|{{largethumb}}|Topografiese gemientekaarte van Ommen]]
