--- a/Heldern.mw
+++ b/Heldern.mw
@@ -18,7 +18,7 @@
 | postkode = 7440-7449, 7683, 7687-7689
 | webstie = [http://www.hellendoorn.nl www.hellendoorn.nl]
 }}
-'''Heldern''' of '''Healndoorn''' (in t [[Nederlaands]]: ''Hellendoorn'') is n [[gemiente (bestuur)|gemeante]] en n doarp in [[Oaveriessel]] op/biej de greanze van [[Sallaand]] en [[Tweante]]. De gemeante har op [[1 juli]] [[2006]] 36.118 inwonners op n öppervlakte van 139,03 [[vierkaante kilemeter|km²]].<ref>[http://www.cbs.nl Centraal Bureau van de Statistiek]</ref> Heldern is vuural bekend wördn duur [[Avonturenpark Hellendoorn]]. De gemeante Heldern maakt deel oet van de [[plusregio]] [[Regio Tweante]], mer beheurt historisch zeen töt [[Sallaand]].
+'''Heldern''' of '''Healndoorn''' (in t [[Nederlaands]]: ''Hellendoorn'') is n [[gemiente (bestuur)|gemeante]] en n doarp in [[Oaveriessel]] op/biej de greanze van [[Sallaand]] en [[Tweante]]. De gemeante har op 1 jannewaori [[2006|2019]] 35.796 inwonners op n öppervlakte van 139.03[[vierkaante kilemeter|km²]].<ref>[http://www.cbs.nl Centraal Bureau van de Statistiek]</ref> Heldern is vuural bekend wördn duur [[Avonturenpark Hellendoorn]]. De gemeante Heldern maakt deel oet van de [[plusregio]] [[Regio Tweante]], mer beheurt historisch zeen töt [[Sallaand]].
 
 == Oaverige döarpe en boerskopn ==
 [[Doarle]], [[Doarserveld]], [[Eeln en Rhaan]], [[Egede]], [[Hoarle (Healdern)|Hoarle]], [[Hankate]], [[Heksel]], [[Hulsn (Healdern)|Hulsn]], [[Marle (Heldern)|Marle]], [[Nijverdal]] (gemeantehoes) en [[Piksen]].
