--- a/Ostara.mw
+++ b/Ostara.mw
@@ -42,7 +42,7 @@ Disse tekste kümt üüt de 10. eywe. Et is een gebed dee vrögt når et vrüchb
 | valign=top |
 === Neadersassisk ===
 
-:Oost’re, Oost’re, 
+:Oust’re, Oust’re, 
 :Aerde moder, 
 :Låt dissen 
 :akker wassen 
