--- a/Japan.mw
+++ b/Japan.mw
@@ -19,11 +19,11 @@
 }}
 '''Japan''' ([[Japans]]: ''Nihon'', [[Kanji]]:日本国) is n laand in [[Azië|Oostazie]]. t Bestait hailmoal uut ailanden, woarvan vief grode: [[Hokkaido]], [[Honshu]], [[Shikoku]] en [[Kyushu]]. Honshu is t grootste en ook t belaankriekste ailaand, woar onder andere de baarge [[Fuji]], de heufdstad [[Tokio]] en de veurmoalege heufdsteden [[Kyoto]] en [[Osaka]] op liggen. Op Hokkaido leven de [[Ainu]], de oorspronkelke bewoner van Japan. 
 
-Japan is n parlementère [[monarchie]], mit as stoatsheufd [[Kaizer Akihito]] dij sunt 1989 de troon van Japan bezet. 
+Japan is n parlementère [[monarchie]], mit as stoatsheufd [[Naruhito]] dij sunt 2019 de troon van Japan bezet. 
 
 Japan wordt ook ''t laand van de riezende zunne'' nuimd deur zien oostelke liggen. De vlage en de noam (nihon = bron van de zunne) verwiezen noar dizze titel.
 
-Japan stait bekend om zien rieke geschiednis dij nau nog aal trugge te vinden is tuzzen de nije gebaauwen van t binoa westers laand. 
+Japan stait bekend om zien rieke geschiednis dij nau nog aal trugge te vinden is tuzzen de nije gebaauwen van t binoa westers laand.
 
 == Steden ==
 De belaankriekste Japanse steden binnen:
