--- a/Almelo.mw
+++ b/Almelo.mw
@@ -9,9 +9,9 @@ kerne = [[Aadorp]], [[Boornerbrook]] en [[Mariaparochie]] |
 öppervlakte = 69,40 |
 öppervlakte laand = 67,43 |
 öppervlakte water = 1,96 |
-inwonners = 72.323 |
-doatum inwonners = 1 februari 2008 |
-dichtheid = 1069|
+inwonners = 72.883 |
+doatum inwonners = 1 jannewoari 2019 |
+dichtheid = 1050|
 breedtegroad = 52/22/0/N |
 lengtegroad = 6/40/0/E |
 verkeersoader = A1, N35, N347, N350; spoorlienn Zwolle-Almelo en Deaventer-Almelo |
@@ -21,7 +21,7 @@ webstie = [http://www.almelo.nl www.almelo.nl] |
 }}
 '''Almelo''' is ne [[Stad (woonstee)|stad]] en [[gemiente (bestuur)|gemeente]] in [[Tweante]] in de [[Nederlaand]]se proveensie [[Oaveriessel]]. t Is de eerste stad in de riege van dree steedn Almelo-[[Hengel (Oaveriessel)|Hengel]]-[[Eanske]].
 
-De gemeente hef ne öppervlakte van 69,40 veerkaante kilometer en op n eerstn juni [[2005]] har de stad 72.117 inwonners. Nöast de stad heurt ook de döarpe [[Aadorp]], [[Boornerbrook]] en n gedeelte van [[Mariaparochie]] biej de gemeente. n Deel van de leu oet Almelo proat [[Tweants]], n dialekt van t [[Neersassies]].
+De gemeente hef ne öppervlakte van 69,40 veerkaante kilometer en op n eerstn jannewoari [[2005|2019]] har de stad 72.883 inwonners. Nöast de stad heurt ook de döarpe [[Aadorp]], [[Boornerbrook]] en n gedeelte van [[Mariaparochie]] biej de gemeente. n Deel van de leu oet Almelo proat [[Tweants]], n dialekt van t [[Neersassies]].
 
 ==Bekende leu oet Almelo==
 *[[Ilse deLange]] - zangeres
