[[Flag_of_Syria.svg]] is vervungen deur [[Flag_of_the_United_Arab_Republic.svg]]. Uut-evoerd deur [[commons:User:CommonsDelinker|CommonsDelinker]], mit as reden: [[:c:COM:Duplicate|Duplicate]]: Exact or scaled-down duplicate: [[:c::File:Flag of the United

--- a/Syrië.mw
+++ b/Syrië.mw
@@ -1,7 +1,7 @@
 {{Laandtabel-twd
 | naaminlaandssproak = الجمهوريّة العربيّة السّوريّة<br /><small>Al Jumhuriyah al Arabiyah as-Suriyah</small>
 | naam = Syrië
-| vlagge = Flag of Syria.svg
+| vlagge = Flag of the United Arab Republic.svg
 | woapn = Coat_of_arms_of_Syria.svg
 | lokasie = Syria in its region (claimed).svg
 | breedtegroad = 35///N | lengtegroad = 38///E | region = SY
