Kleine wieziging anebracht oaver het nye album van Bökkers.

--- a/Bökkers.mw
+++ b/Bökkers.mw
@@ -17,6 +17,6 @@ en et livealbum
 Dårnöäst bint verskillende [[singles]] verskeanen. 3 november (2017) kwam et nyste album uut.
 * ''Schorem Uut De Schiettente''
 
-{{Dialekt|sdz||Nysassiske Skryvwyse}}
+In 2019 is het nye album uutekomn under de name ''Leaven in de brouweri-je''. De clip is upenummen in de fabrieke van Grolsch.{{Dialekt|sdz||Nysassiske Skryvwyse}}
 
 [[Kategorie:Muziekgroep]]
