--- a/Regiolect.mw
+++ b/Regiolect.mw
@@ -10,3 +10,6 @@ Ook in 't Nedersaksische täälgebied e-j in sommige regio's ook wel een soort [
 
 [[Kategorie:Sallaands artikel]]
 [[Kategorie:Taol]]
+
+[[cs:Interdialekt]]
+[[sk:Nadnárečie]]
