--- a/Zwolle.mw
+++ b/Zwolle.mw
@@ -36,7 +36,7 @@ Zwolle beheurt samen met een paer andere gemeenten töt <nowiki>[[Regio Zwolle]]
 == Plaatsen in Zwolle ==
 In de gemeente Zwolle ligt t dörp [[Weensum]], wöör ok n skoele naor is vernuumd. 
 
-t Ef de buurtskoppen: [[Brink-oek]], [[Bruggen-oek]], [[Frank-uus]], [[Aarst]], [[Ärklo]], [[Ärfte]], [[Oog Zuttem]], [[Katerveer]], [[Langen-olte]], [[De Lichtmis]] (diels), [[Oldeneel]], [[Skelle]], [[Spoolde]], [[Veld-oek]], [[Wietem]] en [[Zalné]]. 
+t Ef de buurtskoppen: [[Brink-oek]], [[Bruggen-oek]], [[Frank-uus]], [[Aarst]], [[Ärklo]], [[Ärfte]], [[Oog Zuttem]], [[Katerveer]], [[Langen-olte]], [[De Lichtmis]] (diels), [[Oldeneel]], [[Skelle]], [[Spoolde|Spoelde]], [[Veld-oek]], [[Wietem]] en [[Zalné]]. 
 
 t Ef de volgende woonwieken: [[Aa-landen]], [[Assendörp]], [[Bärkum]], [[Diezerpoorte]], [[Anzeland]], [[Oltenbroek]], [[Kamperpoorte]], [[Märsweteringlanden]], [[Stadsägen]], [[Veerallee]], [[Westen-olte]], [[Wipstrik]] en [[Zwolle-Zuud]]
 
