([[c:GR|GR]]) [[c:COM:FR|File renamed]]: [[File:Jernalderhus.JPG]] → [[File:Moesgaard Jernalderhus.jpg]]

--- a/Germanen.mw
+++ b/Germanen.mw
@@ -22,7 +22,7 @@ Meer prakties nut hef vermeudelek de deur toalkundegen ebruukte indealing in [[G
 
 Leaven en kultuur van al dizze volken verskilden onderling neet zo völle umstreaks de tied dat de [[Romeinsen Riek|Romeinen]] euren macht oaver Europa uutbreidden. De westelieke volksstammen bestonden veurnoamelek uut [[boer]]n, de oosteleken veurnoamelek uut [[veeteelt|schoapsherders en veeholders]]. De Germanen waren arg esteld op eure unofhänkelekheid en hadden gin starke stamverbaanden. In tieden van nood wodden der deur kearls met anzeen nen leider ekozzen moar dizzen mos altied de belangen van de 'kezers' in de kieker holden. Wal waren der joarleks bi-jenkumsten van de stamheufden onderling. 
 
-[[Ofbeelding:Jernalderhus.JPG|thumb|right|Jernalderhus – Noa-ebouwden [[langhuus]] uut de [[iezertied]] rundumme 400 in et Moesgaard-Museum bi-j [[Århus]] (Denemarken)]]
+[[Ofbeelding:Moesgaard Jernalderhus.jpg|thumb|right|Jernalderhus – Noa-ebouwden [[langhuus]] uut de [[iezertied]] rundumme 400 in et Moesgaard-Museum bi-j [[Århus]] (Denemarken)]]
 [[Ofbeelding:Nydam.jpg|thumb|right|[[Nydamskip]] uut de 4de eeuwe]]
 
 De Germaanse moatschoppi-je had zich gröppeerd rundumme [[sibbe (Germanen)|sibben]], families en geslachten met nen gemeenschoppeleken legendariesen veurvader (in t Engels dut hier nog t woord ''siblings'', bloodverwaantn, an herinnern). De stammen wodden regierd deur edelleu. Wieter was der sproake van vri-jen, '[[liten]]' (half-vri-jen) en sloaven. De vri-je kearls mochten et weurd vuuren in de [[volksvergoadering]]. Veur zowiet könningen ne rolle spölden waarn dit veurnoamelek 'gewaskönningen', dee de vrögboarheid van et gewas en de oaverwinning in den stried verzeakeren mossen. 
