--- a/Hoze.mw
+++ b/Hoze.mw
@@ -1,3 +1,5 @@
+[[Bestaand:Persian ethnic group woman in Tehran March 2013.jpg|duum|Hoze]]
+[[Bestaand:Stockings and blue skirt.jpg|duum|Hoze]]
 Een '''hoze''' of '''kouse''' is een [[kledingstuk]] da-j an de [[voot]] of 't [[been]] dragen. Der is een opmarkelijk verschil tussen Noord en Zuud as 't geet um de betekenis van 't woord kouse (of ''kous'' in 't [[Nederlaands|Nederlaans]]): in [[Vlaonderen]] verstaon ze hieronder elke beenbedekker, lang óf kort; in [[Nederlaand]] neumen ze de vootbedekker dee tot over de enkels kump een [[sokke|''sokke'']], en de langere beenbedekkers tot an de [[knieje]], of nog hoger tot op de [[dieje]]n of de [[lies (anatomie)|liezen]] een ''hoze'' of een ''kouse''. Hozen tot krek onder wonnen oek wel ''kniekousen'' of ''kniehozen'' eneumd, hozen dee tot krek boven de knieje koemen wonnen oek an-eduud mit de term ''beenwarmers''; ze bin veural populair onder [[ballet]]dansers.
 
 == Nedersaksisch ==
