--- a/Maas.mw
+++ b/Maas.mw
@@ -3,6 +3,8 @@ chriiiistaaan oeftoewel die lelekste dang tor waRALD
 made bij OMAR BOOOOOOOOOOM
 
 wonend in almere bouwmeesterbuurt a niffo 
+
+je weet zeluf kill je moet gewoon ook vasten 
 == Uutgoande verwiezing ==
 * [http://www.binnenvaartinbeeld.com/de_maas.htm Geskiednis van den Maas.]
 
