*Empty MediaWiki Message*

--- a/Maas.mw
+++ b/Maas.mw
@@ -1,6 +1,6 @@
 chriiiistaaan oeftoewel die lelekste dang tor waRALD
 
-made bij OMAR BOOOOOOOOOOM
+made bijayoub sbbar BOOOOOOOOOOM
 
 wonend in almere bouwmeesterbuurt a niffo 
 
