*Empty MediaWiki Message*

--- a/Maas.mw
+++ b/Maas.mw
@@ -1,5 +1,12 @@
 chriiiistaaan oeftoewel die lelekste dang tor waRALD
 
+Ayoub sabbar wonend in almere bouwmeesterbuurt a niffo is zaterdag avond aangerand in de buurt van een synagoge
+
+de mogelijke daders zijn joden nu is ayoub een antisemitist
+
+deeldit bericht zodat andere mensen medeleven kunnen tonen
+
+
 
 * [http://www.binnenvaartinbeeld.com/de_maas.htm Geskiednis van den Maas.]
 
