--- a/Halloween.mw
+++ b/Halloween.mw
@@ -15,12 +15,12 @@ Vanüüt et middeleywske volksgelöyv wördt der altyd esegd dat up disse åvend
 Nå de [[Reformaty]] kwamen Allerheiligen en Allerselen (Halloween) in Engeland lös van de karke te stån, en wördden et (wearümme) een volksfeest. Yrske en engelske kolonisten güngen in de 20. eywe når Amerika, ümme dår een ny bestån hoapen te krygen, en namen ear gebrüken en traditys med. Dår is et der wat an veranderd en töt nu an to üütegröid töt een wyd evyrden feestdag. Et wördden ouk meyr een kinderfeest.
 
 ==Vandage den dag==
-Teagenwoordig gåt, vöäral in Amerika, up disse tyd lüde ear tüne vul doon med versyrings dee verwyset når de doud en horror, en wachtet såvends bange of vöär de kumst van spoken en monsters. De olde verkleadde ümmegangen doot de kinder nudaags, anvrågend langes de döären ümme snööp. Disse kinder (en vulwassenen wat mangs medloupet) bint verkleaded as spoken, heksen en monsters. As den an de belle trekket en der wördt lös-edåne roopt de kinder: ' ''Trick-or-treat!'' ' (''snööp, of uwen leaven!''). De bedoling is dat de lüde an de döäre te låten skrikken. As y niks geavet, dan gooiet se u et huus oaver med drytpapyre of halet se andere streaken uut. Sünds de [[1980-1989|jåren 80]], vöärige eywe, is Halloween ouk meyr een feest vöär vulwassenen ewörden. So heb y altyd wal feesten wår as y verkleaded hen künnet of kyk y horrorfilms med de måten. Et is nu belangryker med Halloween ewörden dat et allemåle gryselig müt weasen. Mensken proberet mekander so bange möägelik te maken.
+Teagenwoordig gåt, vöäral in Amerika, up disse tyd lüde ear tüne vul doon med versyrings dee verwyset når de doud en horror, en wachtet des åvends bange of vöär de kumst van spoken en monsters. De olde verkleadde ümmegangen doot de kinder nudaagsk, anvrågend langes de döären ümme snööp. Disse kinder (en vulwassenen wat mangs medloupet) bint verklead as spoken, heksen en monsters. As sy an de belle trekket en der wördt lös-edåne roopt de kinder: ' ''Trick-or-treat!'' ' (''snööp, of uwen leaven!''). De bedoling is dat de lüde an de döäre te låten skrikken. As y niks geavt, dan gooiet se u et hüüs oaver med drytpapyre of halet se andere streaken üüt. Sünds de [[1980-1989|jåren 80]], vöärige eywe, is Halloween ouk meyr een feest vöär vulwassenen ewörden. So heb y altyd wal feesten wår as y verkleaded hen künnet of kyk y horrorfilms med de måten. Et is nu belangryker med Halloween ewörden dat et allemåle gryselig müt weasen. Mensken proberet mekander so bange möägelik te maken.
 
-Ümdat Halloween de vöärdsetting is van et olde [[Samhain]] (keltisk oldejårsåvend), doot vöäl [[Wikka]]-heksen en [[nye heidenen]] dissen dag(/åvend) ouk vyren. Vöär ear is et den dag ümme an de vöärolders te wyden. Dat doot se med samenkumsten en rituelen. Der wördt et glas ümhouge edån vöär de vöärolders en med et eaten wördt der een börd apart edån vöär de vöärolder, den ouk by et geselskap anweasing sol weasen.
+Ümdat Halloween de vöärdsetting is van et olde [[Samhain]] (keltisk oldejårsåvend), doot vöäl [[Wikka]]-heksen en [[nye heidenen]] dissen dag(/åvend) ouk vyren. Vöär ear is et den dag ümme an de vöärolders te wyden. Dat doot se med samenkumsten en rituelen. Der wördt et glas ümhouge edån vöär de vöärolders en med et etten wördt der een börd apart edån vöär de vöärolder, den ouk by et geselskap anweasing sol weasen.
 
 ===Allerheiligen en Allerselen===
-Med Halloween (Samhain) stellet mensken vaste dat de doud noudlottig vöär ydereyne kümt. En as wyse van dit benül ümarmen, gåt mensken der eyn mål de jår (wanneyr de natuur ouk syn jårlikse doud in geyt med de harvst) dit med bewüste untkennen en lacherigheid te lyv. Döär u as een douden te kleaden, maak y der eigenlik een soort grappige spot med, y ümklead u dan letterlik med uwen tookumstige lot. Mar med Allerheiligen en Allerselen vyret de [[christendom|christenen]] jüüste et leaven. Want sy vyret de mensken dee vöär ear an egåne bint in et nye leaven nå de doud.
+Med Halloween (Samhain) stellet mensken vaste dat de doud noudlottig vöär ydereyne kümt. En as wyse van dit benül ümarmen, gåt mensken der eyn mål de jår (wanneyr de natuur ouk syn jårlikse doud in geyt med de harvst) dit med bewüste untkennen en lacherigheid te lyv. Döär u as een douden te kleaden, maak y der eigenlik een soort grappige spot med, y ümklead u dan letterlik med uwen tookumstige lot. Mar med Allerheiligen en Allerselen vyret de [[christendom|christenen]] jüüstem et leaven. Want sy vyret de mensken dee vöär ear an egåne bint in et nye leaven nå de doud.
 
 ==Jack-o'-lantern==
 Jack-o'-lantern is de traditionele pompoon med een eng gesichtyn derup esneadene en een lichtyn derin. In Yrland doot se dat med een knolle, mar amerikanen kwamen te kyken dat een pompoon dår eigenlik händiger vöär is. 
