--- a/Archimedes.mw
+++ b/Archimedes.mw
@@ -1,3 +1,4 @@
+[[File:Death of Archimedes.png|thumb|upright=1.1|]]
 [[File:Archimedous Panta Sozomena.tif|thumb|''Archimēdous Panta sōzomena'', 1615]]
 '''Archimedes''' ([[Grieks]]: ''Ἀρχιμήδης''; 287 veur Christus – 212 veur Christus) was nen [[Griek]]sen [[wiskunde]]gen, [[netuurkunde|natuurkundegen]], ingenieur, oetvinder en steernskundegen. Der is neet völle ovver zien laeven bekend, toch wöd e ezene as ene van de belangriekste wettenskoppers in de klassieke oldheid. In de natuurkunde hef e de grondvesten elegd veur ondermeer de hydrostatika en de warking van den hefboom. Hee hef, volgens de ovverlaevering, völle verni-jende machines ontworpen, woaronder kriegswarktugen as den [[katapult]], en ne riege van [[spegel]]s woarmet e [[schip|skaepen]] in [[braand]] kon zetten. Moar hee dee ok oetvindingen veur et börgerlaeven, zoas ne [[waterpompe]] op grond van n soort wormrad, wat nog altied de skroeve van Archimes eneumd wödt, en katrollen en hefbeume. 
 
