--- a/Konrad_Adenauer.mw
+++ b/Konrad_Adenauer.mw
@@ -1,1 +1,3 @@
 '''Konrad Adenauer''' (Köln, 5 january 1876 - 19 april 1967) was een düütske Politiker un wonnen de eerste [[bondskanselier]] van de [[Bondsrippebliek Duutslaand]].
+
+[[Kategorie:Duutslaand]]
