*Empty MediaWiki Message*

--- a/1967.mw
+++ b/1967.mw
@@ -2,3 +2,7 @@
 
 == Geboren ==
 * [[27 april]] - [[Willem-Alexander van de Nedderlanden]]
+
+
+== Oet de tied ==
+* [[19 april]] - [[Konrad Adenauer]] duutske Politiker
