*Empty MediaWiki Message*

--- a/1967.mw
+++ b/1967.mw
@@ -5,4 +5,4 @@
 
 
 == Oet de tied ==
-* [[19 april]] - [[Konrad Adenauer]] duutske Politiker
+* [[19 april]] - [[Konrad Adenauer]] düütske Politiker en bondskanselier
