--- a/Willem_van_Oranje.mw
+++ b/Willem_van_Oranje.mw
@@ -7,7 +7,7 @@ Umdät Willem van Oranje [[protestantisme|protestans]] was, was e dus ok niet vo
 
 De liefspreuk van de prins was ''Je maintiendrai''. In 't les van zien leven gebruken de prins disse uutdrukking mit een toevoeging: ''Je maintiendrai l'honneur, la foy, la loi de Dieu, du Roy, de mes amis et moy'' (vertaling: ''Ik zal de eer, 't geleuf en de wet van God, van de Koning, van mien vrienden en mien haandhaven'').
 
-Aover Willem van Oranje is verschillend eoordeeld. De bekende historicus [[Jan Romein]] rekent hum tot de ärflaoters van de Nederlaanse beschaving. Willem van Oranje steet in elk geval an de [[kribbe|wiege]] van de Nederlaanse nasie. Zonder zien optreden is een onofhankelijk Nederlaand historisch ezien niet denkbaor en zol de geschiedenisse van Europa anders elopen wèèn. 't Optreden van Willem van Oranje hef dus wereldumvattende betekenisse ehad. De eis van de Habsburgers ('t stichen van een centraal eleid wereldriek mit één godsdienst) is stuk-elopen op zien vastberaodenheid. 
+Willem van Oranje is verschillend eoordeeld. De bekende historicus [[Jan Romein]] rekent hum tot de ärflaoters van de Nederlaanse beschaving. Willem van Oranje steet in elk geval an de [[kribbe|wiege]] van de Nederlaanse nasie. Zonder zien optreden is een onofhankelijk Nederlaand historisch ezien niet denkbaor en zol de geschiedenisse van Europa anders elopen wèèn. 't Optreden van Willem van Oranje hef dus wereldumvattende betekenisse ehad. De eis van de Habsburgers ('t stichen van een centraal eleid wereldriek mit één godsdienst) is stuk-elopen op zien vastberaodenheid. 
 
 Willem van Oranje is uuteindelijk op [[10 juli]] [[1584]] vermoord in zien eigen [[huus]] deur de kattelieke [[Balthasar Gerards]] (of: ''Balthasar Gérard''). Willem van Oranjes legendarische woorden waren ''Mien God heb medeliejen mit mien en Oew ärme volk.'' 
 
