--- a/Willem_van_Oranje.mw
+++ b/Willem_van_Oranje.mw
@@ -2,8 +2,7 @@
 '''Willem van Oranje-Nassau''' ([[Dillenburg]], [[24 april]] [[1533]] — [[Delft]], [[10 juli]] [[1584]]), [[Prins van Oranje (titel)|Prins van Oranje]], [[Graof]] van [[Nassau]], bekend äs '''Willem van Oranje''', was de initiatiefnemer en leider van [[Tachtigjaorige Oorlog|de Opstand]] tegen de [[Spanje|Spaanse]] [[Könning (titel)|koning]] [[Filips II van Spanje|Filips II]].
 
 De Opstand steet in de geschiedenisboeken bekend äs de [[Tachtigjaorige Oorlog]] en leiden tot een onofhankelijk [[Nederlaand]]. In de kronieken, brieven en dokementen van de [[16e eeuw]] wordt der soms esproken aover de Opstand. In de [[letterkunde|literetuur]] van vandage wordt 't begin van de Tachtigjaorige Oorlog vake an-eduud mit ''de Opstand'' of ''de Nederlaanse Opstand''.
-
-Umdät Willem van Oranje [[protestantisme|protestans]] was, was e dus ok niet voor één godsdienst, de [[religie|heufdreligie]] was in die tied namelijk 't [[Rooms-Katholieke Karke|rooms-kattelicisme]], de Spaanse koning wol dan ok 't [[protestantisme]] in Nederlaand uutreuien. Eén van de bekendste uutspraken van Willem van Oranje was: ''Ik kan niet goedkeuren dat vorsten over het geweten van hun onderdanen willen heersen en hun de vrijheid van geloof en godsdienst ontnemen''. Disse woorden werden uut-esproken op [[31 december]] [[1564]] in de [[Raod van Staote]]. Mit disse woorden werd 't conflict mit de koning van Spanje (Filips II) onder woorden ebrach.
+Omdat Willem van Oranje [[protestantisme|protestans]] was, was e dus ok niet voor één godsdienst, de [[religie|heufdreligie]] was in die tied namelijk 't [[Rooms-Katholieke Karke|rooms-kattelicisme]], de Spaanse koning wol dan ok 't [[protestantisme]] in Nederlaand uutreuien. Eén van de bekendste uutspraken van Willem van Oranje was: ''Ik kan niet goedkeuren dat vorsten over het geweten van hun onderdanen willen heersen en hun de vrijheid van geloof en godsdienst ontnemen''. Disse woorden werden uut-esproken op [[31 december]] [[1564]] in de [[Raod van Staote]]. Mit disse woorden werd 't conflict mit de koning van Spanje (Filips II) onder woorden ebrach.
 
 De liefspreuk van de prins was ''Je maintiendrai''. In 't les van zien leven gebruken de prins disse uutdrukking mit een toevoeging: ''Je maintiendrai l'honneur, la foy, la loi de Dieu, du Roy, de mes amis et moy'' (vertaling: ''Ik zal de eer, 't geleuf en de wet van God, van de Koning, van mien vrienden en mien haandhaven'').
 
