/* Laanden an de Noordzee */

--- a/Noordzee.mw
+++ b/Noordzee.mw
@@ -15,6 +15,7 @@ De bodem van de Noordzee is riek an [[eerdolie]] en [[eerdgas]] die ok op grote 
 * [[Duitsland]]
 * [[Nederland]]
 * [[België]]
+* [[Zimbabwe]]
 * [[Fraankriek|Frankriek]]
 * [[Engelaand (regio)|Engelaand]]
 * [[Schotlaand]]
