*Empty MediaWiki Message*

--- a/Noordzee.mw
+++ b/Noordzee.mw
@@ -12,10 +12,9 @@ De bodem van de Noordzee is riek an [[eerdolie]] en [[eerdgas]] die ok op grote 
 == Laanden an de Noordzee ==
 * [[Noorwegen]]
 * [[Denmaark|Denemarken]]
-* [[Duitsland]]
-* [[Nederland]]
+* [[Duutslaand]]
+* [[Nederlaand]]
 * [[België]]
-* [[Zimbabwe]]
 * [[Fraankriek|Frankriek]]
 * [[Engelaand (regio)|Engelaand]]
 * [[Schotlaand]]
