--- a/Konfusius.mw
+++ b/Konfusius.mw
@@ -1,4 +1,5 @@
 [[Bestaand:Confucius_02.png|thumb|Konfusius]]
+[[File:Confucius Statue at the Confucius Temple.jpg|thumb|]]
 '''Konfusius''' ([[Sjinees]]: 孔子) was nen deanker, [[filosofie|filosoof]] en learaar oet [[Chinese keizerriek|Sjina]]. Hee leawdn van ongevear 551 v.Kr. töt 479 v.Kr. Hee wör geboorn as Kong Qiu ([[Wade-Giles]]: K’ung Ch’iu) in de stad [[Qufu]] in n Sjinesen stoat [[Lu]] in de nondaagse proveensie [[Shandong]]. Hee wörd ezeen as n vuurbeeld vuur alle learaarn, nen "Wanshishibiao" (万世师表).
 
 Konfusius zinne filosofie benoadrukn good gedrag en hoolding (perseunlik en van de regearing), juuste umgangsvuurskriftn, gerechtigheid en oprechtheid. Disse weardes wördn aal belangrieker in Sjina, duur aandere learwiezes, zo as [[Legalisme (Sjinese filosofie)|Legalisme]] (法家) en [[Taoisme]] (道家) in de [[Han-dynastie]] (206 v.Kr. - 220 n.Kr.). Konfusius zin gedachtengood is saamn evat in ne filosofie dee bekeand is as [[Konfusianisme]] (儒家).
