*Empty MediaWiki Message*

--- a/Ploatsnoambred.mw
+++ b/Ploatsnoambred.mw
@@ -1,5 +1,7 @@
 [[Ofbeelding:Kombord_Delden.jpg|thumb|Ploatsnoambred van [[Dealdn|Delden]]]]
 [[Ofbeelding:Jonkersland.jpg|thumb|n Twijtoaleg ploatsnoambred van n noaberschop]]
+[[Ofbeelding:Plaknammeboerd_Damwâld.png|thumb|n Fraistoaleg ploatsnoambred]]
+
 n '''Ploatsnoambred''' is n bred dij bie de iengaang van n [[ploats]] staait. Onder de ploatsnoam staait de noam van de [[gemiente (bestuur)|gemainte]] woar of de ploats ien ligt, behaalve as de ploatsnoam liek is aan gemaintenoam.
 
 n Ploatsnoambred betaikent ook aaltieds n [[maximumsnelhaid]] van 50 km/u, môr voak wordt der veur de dudelkhaid nog n verkeersbred mit de maximumsnelhaid onder n ploatsnoambred zet. Sums wordt der toch n hogere toustoane snelhaid aangeven, bieveurbeeld op rondwegen.
