Versie 302260 van [[Special:Contributions/185.241.80.11|185.241.80.11]] ([[User talk:185.241.80.11|overleg]]) weerummedreid

--- a/Liemers.mw
+++ b/Liemers.mw
@@ -65,6 +65,7 @@ Veur n klein deel:
 * [[Westervoort]]
 * [[Wienbargen (Deutekem)|Wienbargen]]
 * [[Zaevender]]
+* [[Zeddam]]
 |}
 
 == Rifferenties ==
