*Empty MediaWiki Message*

--- a/Lyste_van_grykske_eilanden.mw
+++ b/Lyste_van_grykske_eilanden.mw
@@ -89,7 +89,7 @@ Hyr vind jy een '''lyste van grykske eilanden'''. Disse lyste is veare van kompl
 * [[Ikaria]]
 * [[Lesbos (eiland)|Lesbos]]
 * [[Agios Efstratios]]
-* [[Samos (eiland)|Samos]]
+* [[Samos]]
 
 == Sporaden ==
 :De [[Sporaden]] höyren by twey verskillende regios
@@ -113,7 +113,7 @@ Hyr vind jy een '''lyste van grykske eilanden'''. Disse lyste is veare van kompl
 * [[Erikoussa]]
 * [[Kalamos (eiland)|Kalamos]]
 * [[Kastos]]
-* [[Korfu (eiland)|Korfu]]
+* [[Korfoe|Korfu]]
 * [[Ithaka]]
 * [[Kefalonia]]
 * [[Lefkada (eiland)|Lefkada]]
@@ -121,7 +121,7 @@ Hyr vind jy een '''lyste van grykske eilanden'''. Disse lyste is veare van kompl
 * [[Meganisi]]
 * [[Skorpios]]
 * [[Paxi]]
-* [[Zakynthos (eiland)|Zakynthos]]
+* [[Zakynthos]]
 
 * [[Elafonisos]] : höyrt by de regio [[Peloponnesos (regio)|Peloponnesos]]
 * [[Kythira]] : höyrt historisk by de Ioniske Eilanden, mär nun by de regio [[Attika (Grykenland)|Attika]]
