*Empty MediaWiki Message*

--- a/Lyste_van_grykske_eilanden.mw
+++ b/Lyste_van_grykske_eilanden.mw
@@ -71,7 +71,7 @@ Hyr vind jy een '''lyste van grykske eilanden'''. Disse lyste is veare van kompl
 * [[Pserimos]]
 
 == Eilanden in de noordelike Egeiske Sey ==
-:De eilanden behoren tot de regio [[Oost-Macedonië en Thracië]]
+:De eilanden behöyren tot de regio [[Oystmacedonie en Tracie]]
 * [[Limnos]]
 * [[Orestis]]
 * [[Samothrake]]
