--- a/Lyste_van_grykske_eilanden.mw
+++ b/Lyste_van_grykske_eilanden.mw
@@ -51,7 +51,7 @@ Hyr vind jy een '''lyste van grykske eilanden'''. Disse lyste is veare van kompl
 
 == Dodekanesos ==
 :De [[Dodekanesos]] formen samen mid de Cykladen de regio [[Süüdegeiske Eilanden]]
-* [[Astipalaia]]
+* [[Astipalea]]
 * [[Agathonisi]]
 * [[Chalki]]
 * [[Gyaros]]
