/* Eilanden in de oustelike Egeiske Sey, vöär de türkske küst */

--- a/Lyste_van_grykske_eilanden.mw
+++ b/Lyste_van_grykske_eilanden.mw
@@ -81,7 +81,7 @@ Hyr vind jy een '''lyste van grykske eilanden'''. Disse lyste is veare van kompl
 :De eilanden formen de regio [[Noordegeiske Eilanden]]
 * [[Arginusae]]
 * [[Chios (eiland)|Chios]]
-* [[Oinousses]]
+* [[Inousses]]
 * [[Psara (gemeynde)|Psara]]
 * [[Antipsara]]
 * [[Fourni]]
