*Empty MediaWiki Message*

--- a/Lyste_van_grykske_eilanden.mw
+++ b/Lyste_van_grykske_eilanden.mw
@@ -79,12 +79,11 @@ Hyr vind jy een '''lyste van grykske eilanden'''. Disse lyste is veare van kompl
 
 == Eilanden in de oustelike Egeiske Sey, vöär de türkske küst ==
 :De eilanden formen de regio [[Noordegeiske Eilanden]]
-* [[Arginusae]]
 * [[Chios (eiland)|Chios]]
 * [[Inousses]]
 * [[Psara (gemeynde)|Psara]]
 * [[Antipsara]]
-* [[Fourni]]
+* [[Fourni]] of ''Fourni Korseon''
 * [[Thymena]]
 * [[Ikaria]]
 * [[Lesbos (eiland)|Lesbos]]
