--- a/1393.mw
+++ b/1393.mw
@@ -4,7 +4,7 @@
 [[Eeuwen]]: [[13e eeuw]] – [[14e eeuw]] – [[15e eeuw]]
 |-----
 | align="center" |
-Jaoren: [[1388]] – [[1389]] – [[1390]] – [[1391]] – [[1392]] – [[1393]] – [[1394]] – [[1395]] – [[1396]] – [[1397]] – [[1398]]
+Jaoren: [[1388]] – [[1389]] – [[1390]] – [[1391]] – [[1392]] – 1393 – [[1394]] – [[1395]] – [[1396]] – [[1397]] – [[1398]]
 |}
 
 De volgende gebeurtenissen vunnen plaose in 't jaor '''1393''':
