--- a/1398.mw
+++ b/1398.mw
@@ -4,7 +4,7 @@
 [[Eeuwen]]: [[13e eeuw]] – [[14e eeuw]] – [[15e eeuw]]
 |-----
 | align="center" |
-Jaoren: [[1393]] – [[1394]] – [[1395]] – [[1396]] – [[1397]] – [[1398]] – [[1399]] – [[1400]] – [[1401]] – [[1402]] – [[1403]]
+Jaoren: [[1393]] – [[1394]] – [[1395]] – [[1396]] – [[1397]] – 1398 – [[1399]] – [[1400]] – [[1401]] – [[1402]] – [[1403]]
 |}
 
 De volgende gebeurtenissen vunnen plaose in 't jaor '''1398''':
