--- a/1399.mw
+++ b/1399.mw
@@ -4,7 +4,7 @@
 [[Eeuwen]]: [[13e eeuw]] – [[14e eeuw]] – [[15e eeuw]]
 |-----
 | align="center" |
-Jaoren: [[1394]] – [[1395]] – [[1396]] – [[1397]] – [[1398]] – [[1399]] – [[1400]] – [[1401]] – [[1402]] – [[1403]] – [[1404]]
+Jaoren: [[1394]] – [[1395]] – [[1396]] – [[1397]] – [[1398]] – 1399 – [[1400]] – [[1401]] – [[1402]] – [[1403]] – [[1404]]
 |}
 
 De volgende gebeurtenissen vunnen plaose in 't jaor '''1399''':
