--- a/1406.mw
+++ b/1406.mw
@@ -7,7 +7,7 @@
 [[Decennia]]: [[1380-1389]] – [[1390-1399]] – [[1400-1409]] – [[1410-1419]] – [[1420-1429]]
 |-----
 | align="center" |
-Jaoren: [[1401]] – [[1402]] – [[1403]] – [[1404]] – [[1405]] – [[1406]] – [[1407]] – [[1408]] – [[1409]] – [[1410]] – [[1411]]
+Jaoren: [[1401]] – [[1402]] – [[1403]] – [[1404]] – [[1405]] – 1406 – [[1407]] – [[1408]] – [[1409]] – [[1410]] – [[1411]]
 |}
 
 De volgende gebeurtenissen vunnen plaose in 't jaor '''1406''':
