corr using [[Project:AWB|AWB]]

--- a/1412.mw
+++ b/1412.mw
@@ -7,14 +7,14 @@
 [[Decennia]]: [[1390-1399]] – [[1400-1409]] – [[1410-1419]] – [[1420-1429]] – [[1430-1439]]
 |-----
 | align="center" |
-Jaoren: [[1407]] – [[1408]] – [[1409]] – [[1410]] – [[1411]] – [[1412]] – [[1413]] – [[1414]] – [[1415]] – [[1416]] – [[1417]]
+Jaoren: [[1407]] – [[1408]] – [[1409]] – [[1410]] – [[1411]] – 1412 – [[1413]] – [[1414]] – [[1415]] – [[1416]] – [[1417]]
 |}
 
 De volgende gebeurtenissen vunnen plaose in 't jaor '''1412''':
 
 == Gebeurtenissen ==
 * Parakrama Bahu VI wörd [[Könning (titel)|koning]] van [[Sri Lanka|Ceylon]] in Kotte. 
-*[[Keizer Go-Komatsu van Japan]] wörd op-evolgd deur [[Keizer Shoko van Japan|Keizer Shoko]] 
+*[[Keizer Go-Komatsu van Japan]] wörd op-evolgd deur [[Keizer Shoko van Japan|Keizer Shoko]]
 
 == Geboren ==
 * [[6 jannewaori]] - [[Jeanne d'Arc]]
