--- a/1415.mw
+++ b/1415.mw
@@ -7,7 +7,7 @@
 [[Decennia]]: [[1390-1399]] – [[1400-1409]] – [[1410-1419]] – [[1420-1429]] – [[1430-1439]]
 |-----
 | align="center" |
-Jaoren: [[1410]] – [[1411]] – [[1412]] – [[1413]] – [[1414]] – [[1415]] – [[1416]] – [[1417]] – [[1418]] – [[1419]] – [[1420]]
+Jaoren: [[1410]] – [[1411]] – [[1412]] – [[1413]] – [[1414]] – 1415 – [[1416]] – [[1417]] – [[1418]] – [[1419]] – [[1420]]
 |}
 
 De volgende gebeurtenissen vunnen plaose in 't jaor '''1415''':
