corr using [[Project:AWB|AWB]]

--- a/1424.mw
+++ b/1424.mw
@@ -7,14 +7,14 @@
 [[Decennia]]: [[1400-1409]] – [[1410-1419]] – [[1420-1429]] – [[1430-1439]] – [[1440-1449]]
 |-----
 | align="center" |
-Jaoren: [[1419]] – [[1420]] – [[1421]] – [[1422]] – [[1423]] – [[1424]] – [[1425]] – [[1426]] – [[1427]] – [[1428]] – [[1429]]
+Jaoren: [[1419]] – [[1420]] – [[1421]] – [[1422]] – [[1423]] – 1424 – [[1425]] – [[1426]] – [[1427]] – [[1428]] – [[1429]]
 |}
 
 De volgende gebeurtenissen vunnen plaose in 't jaor '''1424''':
 
 == Gebeurtenissen ==
 * [[17 augustus]] [[Slag bie Verneuil]]. Veural an-espoord deur hullie Schotse bondgenoten gaon de Dauphinisten de slag an. Hoewel de Engelsen onder Regent Bedford zoen 1000 man verliezen verslaon zee de Fransen en Schotten en nemen hullie anvoerders gevangen.
-* Bedfords jongere breur [[Humphrey van Gloucester]] wörd verlief op [[Jacoba van Beieren]], de arfdochter van Hollaand, Zeelaand en Henegouwen. Dit zet een streep deur de Bourgondische rekening en zet Bedford veur een groot prebleem umdat e de steun van zien Bourgondische zwaoger neet kan missen. 
+* Bedfords jongere breur [[Humphrey van Gloucester]] wörd verlief op [[Jacoba van Beieren]], de arfdochter van Hollaand, Zeelaand en Henegouwen. Dit zet een streep deur de Bourgondische rekening en zet Bedford veur een groot prebleem umdat e de steun van zien Bourgondische zwaoger neet kan missen.
 
 == Geboren ==
 *[[31 oktober]], [[Wladyslaw III van Polen]], koning van [[Polen]] ([[1434]] tot [[1444]]), koning van [[Hongarije]] ([[1440]] tot [[1444]]).
