corr using [[Project:AWB|AWB]]

--- a/1426.mw
+++ b/1426.mw
@@ -7,7 +7,7 @@
 [[Decennia]]: [[1400-1409]] – [[1410-1419]] – [[1420-1429]] – [[1430-1439]] – [[1440-1449]]
 |-----
 | align="center" |
-Jaoren: [[1421]] – [[1422]] – [[1423]] – [[1424]] – [[1425]] – [[1426]] – [[1427]] – [[1428]] – [[1429]] – [[1430]] – [[1431]]
+Jaoren: [[1421]] – [[1422]] – [[1423]] – [[1424]] – [[1425]] – 1426 – [[1427]] – [[1428]] – [[1429]] – [[1430]] – [[1431]]
 |}
 
 De volgende gebeurtenissen vunnen plaose in 't jaor '''1426''':
