--- a/1430.mw
+++ b/1430.mw
@@ -7,7 +7,7 @@
 [[Decennia]]: [[1410-1419]] – [[1420-1429]] – [[1430-1439]] – [[1440-1449]] – [[1450-1459]]
 |-----
 | align="center" |
-Jaoren: [[1425]] – [[1426]] – [[1427]] – [[1428]] – [[1429]] – [[1430]] – [[1431]] – [[1432]] – [[1433]] – [[1434]] – [[1435]]
+Jaoren: [[1425]] – [[1426]] – [[1427]] – [[1428]] – [[1429]] – 1430 – [[1431]] – [[1432]] – [[1433]] – [[1434]] – [[1435]]
 |}
 
 De volgende gebeurtenissen vunnen plaose in 't jaor '''1430''':
