corr using [[Project:AWB|AWB]]

--- a/1433.mw
+++ b/1433.mw
@@ -7,13 +7,13 @@
 [[Decennia]]: [[1410-1419]] – [[1420-1429]] – [[1430-1439]] – [[1440-1449]] – [[1450-1459]]
 |-----
 | align="center" |
-Jaoren: [[1428]] – [[1429]] – [[1430]] – [[1431]] – [[1432]] – [[1433]] – [[1434]] – [[1435]] – [[1436]] – [[1437]] – [[1438]]
+Jaoren: [[1428]] – [[1429]] – [[1430]] – [[1431]] – [[1432]] – 1433 – [[1434]] – [[1435]] – [[1436]] – [[1437]] – [[1438]]
 |}
 
 De volgende gebeurtenissen vunnen plaose in 't jaor '''1433''':
 
 == Gebeurtenissen ==
-* [[Khai Bua Ban]] volg [[Lue Sai]] op as 9e koning van [[Lan Xang]]. 
+* [[Khai Bua Ban]] volg [[Lue Sai]] op as 9e koning van [[Lan Xang]].
 
 == Geboren ==
 * [[10 november]] - [[Karel de Stoute]], hertog van [[Bourgondië]]
