--- a/1434.mw
+++ b/1434.mw
@@ -7,7 +7,7 @@
 [[Decennia]]: [[1410-1419]] – [[1420-1429]] – [[1430-1439]] – [[1440-1449]] – [[1450-1459]]
 |-----
 | align="center" |
-Jaoren: [[1429]] – [[1430]] – [[1431]] – [[1432]] – [[1433]] – [[1434]] – [[1435]] – [[1436]] – [[1437]] – [[1438]] – [[1439]]
+Jaoren: [[1429]] – [[1430]] – [[1431]] – [[1432]] – [[1433]] – 1434 – [[1435]] – [[1436]] – [[1437]] – [[1438]] – [[1439]]
 |}
 
 De volgende gebeurtenissen vunnen plaose in 't jaor '''1434''':
