corr using [[Project:AWB|AWB]]

--- a/1436.mw
+++ b/1436.mw
@@ -7,13 +7,13 @@
 [[Decennia]]: [[1410-1419]] – [[1420-1429]] – [[1430-1439]] – [[1440-1449]] – [[1450-1459]]
 |-----
 | align="center" |
-Jaoren: [[1431]] – [[1432]] – [[1433]] – [[1434]] – [[1435]] – [[1436]] – [[1437]] – [[1438]] – [[1439]] – [[1440]] – [[1441]]
+Jaoren: [[1431]] – [[1432]] – [[1433]] – [[1434]] – [[1435]] – 1436 – [[1437]] – [[1438]] – [[1439]] – [[1440]] – [[1441]]
 |}
 
 De volgende gebeurtenissen vunnen plaose in 't jaor '''1436''':
 
 == Gebeurtenissen ==
-* [[Kham Keut]] volg [[Khai Bua Ban]] op as 10e koning van [[Lan Xang]]. Hij wonnen deur prinses [[Keo Phim Fa]] op de trone ezet. 
+* [[Kham Keut]] volg [[Khai Bua Ban]] op as 10e koning van [[Lan Xang]]. Hij wonnen deur prinses [[Keo Phim Fa]] op de trone ezet.
 
 == Geboren ==
 * [[Isabella van Bourbon]], moor van [[Maria van Bourgondië]]
