--- a/1439.mw
+++ b/1439.mw
@@ -7,7 +7,7 @@
 [[Decennia]]: [[1410-1419]] – [[1420-1429]] – [[1430-1439]] – [[1440-1449]] – [[1450-1459]]
 |-----
 | align="center" |
-Jaoren: [[1434]] – [[1435]] – [[1436]] – [[1437]] – [[1438]] – [[1439]] – [[1440]] – [[1441]] – [[1442]] – [[1443]] – [[1444]]
+Jaoren: [[1434]] – [[1435]] – [[1436]] – [[1437]] – [[1438]] – 1439 – [[1440]] – [[1441]] – [[1442]] – [[1443]] – [[1444]]
 |}
 
 De volgende gebeurtenissen vunnen plaose in 't jaor '''1439''':
