--- a/1651.mw
+++ b/1651.mw
@@ -4,7 +4,7 @@
 [[Eeuwen]]: [[16e eeuw]] – [[17e eeuw]] – [[18e eeuw]]
 |-----
 | align="center" |
-Jaoren: [[1646]] – [[1647]] – [[1648]] – [[1649]] – [[1650]] – [[1651]] – [[1652]] – [[1653]] – [[1654]] – [[1655]] – [[1656]]
+Jaoren: [[1646]] – [[1647]] – [[1648]] – [[1649]] – [[1650]] – 1651 – [[1652]] – [[1653]] – [[1654]] – [[1655]] – [[1656]]
 |}
 
 De volgende gebeurtenissen vunnen plaose in 't jaor '''1651''':
