corr using [[Project:AWB|AWB]]

--- a/1969.mw
+++ b/1969.mw
@@ -10,6 +10,6 @@
 * ...
 
 == Oet de tied ==
-*[[Hendrik van Laar]] ([[1878]]-[[1969]]), dörpsdichter uut [[Luttn|Lutten]]
+*[[Hendrik van Laar]] ([[1878]]-1969), dörpsdichter uut [[Luttn|Lutten]]
 
 [[Kategorie:Achterhooks artikel]]
