--- a/Barendrecht.mw
+++ b/Barendrecht.mw
@@ -4,7 +4,7 @@ bestaandsnaam woapn = Coat_of_arms_of_Barendrecht.svg |
 naam = Barendrecht |
 lokatie = LocatieBarendrecht |
 proveensie = [[Zuud-Hollaand]] |
-heufdplaats = [[Barendrecht]] | 
+heufdplaats = Barendrecht | 
 öppervlakte = 21,73 |
 öppervlakte laand = 19,83 |
 öppervlakte water = 1,9  |
@@ -19,11 +19,12 @@ postkode = 2990-2994 |
 webstie = [http://www.barendrecht.nl www.barendrecht.nl] |
 }}
 
-'''Barendrecht''' is ne plaatse en gemeente in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. In de gemeente wont 47.442 leu op ne vlakte van 21,74 km² (met 1,34 km² water). De gemeente lig op et eilaand [[Iesselmoond]]. Et is ene van de [[BAR-gemeente]]s en heurt bie de [[Stadregio Rotterdam]] en de [[Metropoolregio Rotterdam-Den Haag]].
+'''Barendrecht''' is ne plaatse en gemeente in de [[Nederlaand]]se [[proveensie]] [[Zuud-Hollaand]]. In de gemeente wont 47.442 leu op ne vlakte van 21,74&nbsp;km² (met 1,34&nbsp;km² water). De gemeente lig op et eilaand [[Iesselmoond]]. Et is ene van de [[BAR-gemeente]]s en heurt bie de [[Stadregio Rotterdam]] en de [[Metropoolregio Rotterdam-Den Haag]].
 
 ==Wonkernen==
 Nöast Barendrecht zelf ligt der in de gemeente nog de wonkernen [[Smitshook (Barendrecht)|Smitshook]] en de [[boerskop]]pen [[Carnisse]], [[Barendrechtse Veer]], [[Koodood]], [[Middeldiek (Barendrecht)|Middeldiek]] en [[Noldiek]].
 
 {{Zuud-Hollaand}}
-[[Kategorie: Tweants artikel]]
-[[Kategorie: Gemeente in Zuud-Hollaand]]
+
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Gemeente in Zuud-Hollaand]]
