corr using [[Project:AWB|AWB]]

--- a/Bargeyk.mw
+++ b/Bargeyk.mw
@@ -4,7 +4,7 @@ bestaandsnaam woapn = Coat_of_arms_of_Bergeijk.svg |
 naam = Bargeyk |
 lokatie = LocatieBergeijk |
 proveensie = [[Noord-Braobant|Noord-Bråbant]] |
-heufdplaats = [[Bargeyk]] | 
+heufdplaats = Bargeyk | 
 öppervlakte = 101,73 |
 öppervlakte laand = 101,18  |
 öppervlakte water = 0,55 |
@@ -19,7 +19,7 @@ postkode = 5560, 5561, 5563, 5570, 5571, 5575 |
 webstie = [http://www.bergeijk.nl www.bergeijk.nl] |
 }}
 
-'''Bargeyk''' ([[Braobants|bråbantsk]]: ''Bérgààjk'', [[Nederlaands|hollandsk]]: ''Bergeijk'') is ne plaatse en gemeende in de [[Nederlaand|neaderlandske]] provincy [[Noord-Braobant|Noord-Bråbant]]. De kempenske gemeende hevt 18.399 inwoaners (31 mei 2018). Et beslöt 103,22 km² (wårvan 0,70 km² an water en ruum een verendeyl wold- en natuurgebeed). De gemeende Bargeyk is underdeyl van et kaderwetgebeed SRE. Doo as in [[1997]] de gemeenden Bergeyk, Luyksgestel, Reethoven en Westerhoven by mekander güngen, unstünd de hüdige gemeende Bergeijk, in et neaderlandsk med 'ij' skreaven. De gemeende müt et vanolds hebben van [[boeren|burenbedryven]], mär de lätste jåren wörd turisme en vermaak ouk vöärtan belangryker. In [[2007]] hebbet se een natuurplan in warking esat. In [[2013]] wör de gemeende Bargeyk köäsen as eyne van de gröynste dörpe van Europa.<ref>[https://www.ed.nl/regio/kempen/bergeijk/bergeijk-wint-goud-in-verkiezing-groenste-dorp-van-europa-2013-1.4026707 Eindghovens Dagblad. "Bergeijk wint goud in verkiezing groenste dorp van Europa."] Bekeaken up 2 december 2018.</ref>
+'''Bargeyk''' ([[Braobants|bråbantsk]]: ''Bérgààjk'', [[Nederlaands|hollandsk]]: ''Bergeijk'') is ne plaatse en gemeende in de [[Nederlaand|neaderlandske]] provincy [[Noord-Braobant|Noord-Bråbant]]. De kempenske gemeende hevt 18.399 inwoaners (31 mei 2018). Et beslöt 103,22&nbsp;km² (wårvan 0,70&nbsp;km² an water en ruum een verendeyl wold- en natuurgebeed). De gemeende Bargeyk is underdeyl van et kaderwetgebeed SRE. Doo as in [[1997]] de gemeenden Bergeyk, Luyksgestel, Reethoven en Westerhoven by mekander güngen, unstünd de hüdige gemeende Bergeijk, in et neaderlandsk med 'ij' skreaven. De gemeende müt et vanolds hebben van [[boeren|burenbedryven]], mär de lätste jåren wörd turisme en vermaak ouk vöärtan belangryker. In [[2007]] hebbet se een natuurplan in warking esat. In [[2013]] wör de gemeende Bargeyk köäsen as eyne van de gröynste dörpe van Europa.<ref>[https://www.ed.nl/regio/kempen/bergeijk/bergeijk-wint-goud-in-verkiezing-groenste-dorp-van-europa-2013-1.4026707 Eindghovens Dagblad. "Bergeijk wint goud in verkiezing groenste dorp van Europa."] Bekeaken up 2 december 2018.</ref>
 
 In [[1923]] köäs de kooperative weaverye De Ploeg Bargeyk as höyvdvestigingssteyde. Dee was bekend üm öäre moderne versameling woaning[[textiel|tekstyl]]. Et fabryksgebow uut [[1957]] is untwörpen döär [[Gerrit Rietveld]], den as ouk andere bouwwarke in de gemeende untwörpen so as ne büshalte, ne klokke en verskeidene hüse.
 
