corr using [[Project:AWB|AWB]]

--- a/Drèents.mw
+++ b/Drèents.mw
@@ -29,7 +29,7 @@
 ***[[West-Germaans]]  
 ****[[Nederduuts]]
 ****[[Nedersaksisch]] 
-*****[[Drèents]]
+*****Drèents
 |-
 |Schrift
 |'t [[Latainse alfabet|Latiense alfabet]]
@@ -85,9 +85,7 @@ Vergeliekt ditte mit de versie uut [[Runerwold]] (typisch veur hiel Zuud-West-Dr
 
 == Verwiezings ==
 === Rifferenties ===
-<div class="references-small">
-<references/>
-</div>
+{{Reflist}}
 
 === Kiekt ok bi'j ===
 * [[Drèentse taolwiezer]]
