corr using [[Project:AWB|AWB]]

--- a/Eindhoown.mw
+++ b/Eindhoown.mw
@@ -4,7 +4,7 @@
 | naam = Eindhoown
 | lokatie = LocatieEindhoven
 | proveensie = [[Noord-Broabaant]]
-| heufdplaats = [[Eindhoown]]
+| heufdplaats = Eindhoown
 | öppervlakte = 88,84
 | öppervlakte laand = 87,70
 | öppervlakte water = 1,14
@@ -21,11 +21,11 @@
 
 '''Eindhoown''' ([[Neerlaands]]: ''Eindhoven'') is ne [[stad (woonstee)|stad]] en [[gemeente]] in de [[Neerlaand]]se [[proveensie]] [[Noord-Broabaant]].
 
-De gemeente hef t viefdegrötste inwonnertal van Neerlaand, met op [[1 april]] [[2011]] 216.157 leu op n gebeed van 88,84 km². De gemeente Eindhoown is deel van t [[koaderwetgebeed]] SRE (Samenwerkingsverband Regio Eindhoven) en stedelik netwoark BrabantStad. t Verstedelikt gebeed Eindhoown (nit duur mekoar haaln met t Saamnwoarkingsverbaand), wat besteet oet de gemeentes Eindhoown, [[Veeldhoown]], [[Best (gemeente)|Best]], [[Nuunn]] en [[Geeldrop-Mierlo]], hef zowat 440.000 inwonners op n gebeed van 540 km². In t SRE wont zowat 700.000 leu.
+De gemeente hef t viefdegrötste inwonnertal van Neerlaand, met op [[1 april]] [[2011]] 216.157 leu op n gebeed van 88,84&nbsp;km². De gemeente Eindhoown is deel van t [[koaderwetgebeed]] SRE (Samenwerkingsverband Regio Eindhoven) en stedelik netwoark BrabantStad. t Verstedelikt gebeed Eindhoown (nit duur mekoar haaln met t Saamnwoarkingsverbaand), wat besteet oet de gemeentes Eindhoown, [[Veeldhoown]], [[Best (gemeente)|Best]], [[Nuunn]] en [[Geeldrop-Mierlo]], hef zowat 440.000 inwonners op n gebeed van 540&nbsp;km². In t SRE wont zowat 700.000 leu.
 
 Skoonwal Eindhoown völle soortn industrie hef ekeand, zo as [[linngood]], [[sigoare|sigoarn]] en heudemakers, is Eindhoown rechtevoort vuural bekeand van de [[Phillips]], dee't elektries gerei maakt, zo as laampn, [[tellevisie]]s en [[radio]]'s, en van de [[auto]]fabriek [[DAF]].
 
-In Einhoown zitt verskeaidene hogeskooln en ne techniese [[universiteat]], de [[Techniese Universiteat Eindhoown]] (TU/e). Doarduur is dr ook n oetgebreaid studeantnleawn, en doarop ansloetnd n groot anbod van kafees en oetgoansplekn ontstoan. 
+In Einhoown zitt verskeaidene hogeskooln en ne techniese [[universiteat]], de [[Techniese Universiteat Eindhoown]] (TU/e). Doarduur is dr ook n oetgebreaid studeantnleawn, en doarop ansloetnd n groot anbod van kafees en oetgoansplekn ontstoan.
 
 ==Naam==
 n Naam ''Eindhoown'' keump oet n [[11e eeuw|11den]] of [[12e eeuw|12den eeuw]]. t Woard 'eind' wörd wal vakerder in plaatsnaams gebroekt, en zol in dit geval te maakn könn hebn met [[eend|eand]]n. t Woard 'hoown' keump ook regelmoatig vuur, en wörd in dit geval wal es oet elegd as n lestn ''hof'' of ''howe'' van [[Woensel]]. ''hof'' en ''howe'' köant in Broabaant ongevear t zelfde beteekn. Hiermet kan bedoold wordn n 'stukke laand bie n boernhof' of n 'boernhof' zelf. t Woard -hoown lik in t mearvoold te stoan, mer det is t nit. t Hef te maakn met ne oolde naamval den't angavn det t ne plaatsbepoaling was, mer disse naamval wörd rechtevoort nit mear gebroekt.
@@ -46,7 +46,7 @@ Wieders hef Eindhoown ne eegne vlochthaawn, wat doarnöast ook ne basis is vuur 
 ==Oetgoande koppeling==
 *[http://www.eindhoven.nl Offisjele webstea van Eindhoven] ([[Neerlaands|NL]])
 
-[[Kategorie: Tweants artikel]]
-[[Kategorie: Gemeente in Noord-Braobant]]
+[[Kategorie:Tweants artikel]]
+[[Kategorie:Gemeente in Noord-Braobant]]
 [[Kategorie:Plaotse in Noord-Braobant‎]]
 [[Kategorie:Stad in Nederlaand]]
