corr using [[Project:AWB|AWB]]

--- a/Epe.mw
+++ b/Epe.mw
@@ -21,7 +21,7 @@ webstee = [http://www.epe.nl/ www.epe.nl ] |
 '''Epe''' is n plaatse en gemeente in de [[Nederlaand|Nederlandse]] [[pervincie|provinsie]] [[Gelderland]], in t noordoostelike deel van de [[Veluwe]]. De gemeente had op [[1 mei 2014]] 32.360 inwoners (bron: CBS) en n oppervlakte van 157,25 [[vierkaante kilometer|km²]]. t Gemeentehuus ligt in Epe an de markt. In [[2005]] is t van butenof verniejd. Der leup vrogger ok n spoorliende deur Epe. t Darp had ok n stasion mär dät is uut gebruuk eneumen. De [[zusterstad]] van Epe is de [[Duutslaand|Duutse]] gemeente [[Gronauwe|Gronau]].
 
 == Woonkernen ==
-* De gemeente Epe hef 4 darpen: [[Epe]] (15.552 inwoners), [[Vaossen]] (12.770 inwoners), [[Emst]] (3048 inwoners) en [[Une]] (1599 inwoners).
+* De gemeente Epe hef 4 darpen: Epe (15.552 inwoners), [[Vaossen]] (12.770 inwoners), [[Emst]] (3048 inwoners) en [[Une]] (1599 inwoners).
 * Overige kernen: [[Boshoek (Nederland)|Boshoek]], [[Diekhuzen (Epe)|Diekhuzen]], [[Geerstraote (buurtschap)|Geerstraote]], [[Gortel]], [[Hanedarp]], [[De Hegge]], [[De Jonas]], [[t Laor]], [[Laorstraote]], [[Loobrink]], [[Niersen]], [[De Oosterhof]], [[Schaveren]], [[Tongeren (Gelderland)|Tongeren]], [[Vemde]], [[Westendarp (Epe)|Westendarp]], [[Wienbargen (Epe)|Wienbargen]], [[Wissel (Epe)|Wissel]] en [[Zuuk]].
 
 [[Bestaand:Epe_karke.jpg|thumb|left|200px|Olde karke in Epe]]
