corr using [[Project:AWB|AWB]]

--- a/Film_(cinematografie).mw
+++ b/Film_(cinematografie).mw
@@ -2,7 +2,7 @@ Een '''film''' of rolprent is een verhael dat uutbeeld wodt in een serie rap opi
 
 In de [[cinematografie]] gaot et over vastelegde bewegende beelden, maekt deur de inwarking van [[Locht (straoling)|locht]] op een lochtgevoelige laoge op een lange filmstroke, die deur de [[kamera]] rolt tiedens et opnemen. In disse laeste betekenis bin ok et geluudsspoor en eventuele aandere sporen inbegrepen.
 
-De [[film (cinematografie)|filmindustrie]] begon mit films zonder geluud, ok wel de [[stomme film]] nuumd. Laeter kwam de [[geluudsfilm]], volgd deur de [[kleurefilm]]. De meeste films wodden in een [[bioskoop]] vertoond mit behulp van een [[filmprojektor]] (alhoewel [[digitaole projektie]] steeds vaeker veurkomp), mar d'r wodden ok veul [[tillevisiefilm]]s maekt. 
+De '''filmindustrie''' begon mit films zonder geluud, ok wel de [[stomme film]] nuumd. Laeter kwam de [[geluudsfilm]], volgd deur de [[kleurefilm]]. De meeste films wodden in een [[bioskoop]] vertoond mit behulp van een [[filmprojektor]] (alhoewel [[digitaole projektie]] steeds vaeker veurkomp), mar d'r wodden ok veul [[tillevisiefilm]]s maekt.
 
 D'r bestaon verschillende [[filmgenres|genres]]. De [[cinematografie]] is de filmkeunst.
 
