corr using [[Project:AWB|AWB]]

--- a/Groft-De_Riep.mw
+++ b/Groft-De_Riep.mw
@@ -18,7 +18,7 @@ netnummer = 0299, 075 |
 postkode = 1483-1488, 1436 |
 op-egaon = [[Alkmaar]] |
 }}
-'''Groft-De Riep''' is ne veurmaolige gemeente in de Nederlandse provinsie [[Noord-Hollaand]]. t Lag veur n deel in de regio [[Zaanstreek]] en van oldsher ok in t Waterlaand. De gemeente had n oppervlakte van 21,76 km² (waorvan 1,72 km² water). Op [[15 meert]] [[2012]] wordde definitief besleuten dat de [[Groft-De Riep]] samen mit de gemeente [[Scharmer]] per [[1 jannewaori]] [[2015]] op zol gaon in de gemeente [[Alkmaar]]. 
+'''Groft-De Riep''' is ne veurmaolige gemeente in de Nederlandse provinsie [[Noord-Hollaand]]. t Lag veur n deel in de regio [[Zaanstreek]] en van oldsher ok in t Waterlaand. De gemeente had n oppervlakte van 21,76&nbsp;km² (waorvan 1,72&nbsp;km² water). Op [[15 meert]] [[2012]] wordde definitief besleuten dat de Groft-De Riep samen mit de gemeente [[Scharmer]] per [[1 jannewaori]] [[2015]] op zol gaon in de gemeente [[Alkmaar]].
 
 ==Darpen binnen de gemeente==
 *[[De Riep]]
@@ -48,5 +48,5 @@ Ofbeelding:Rijp_karst.jpg|Karst in Den Riep
 
 {{Noord-Hollaand}}
 
-[[Kategorie:Achterhooks_artikel]]
+[[Kategorie:Achterhooks artikel]]
 [[Kategorie:Vroggere gemaente in Noord-Hollaand]]
