corr using [[Project:AWB|AWB]]

--- a/Juni.mw
+++ b/Juni.mw
@@ -7,7 +7,7 @@
 * Joodse naom: ''Tammus''
 * De [[dierenriem|steernsbeelden]] van dizze maond bint [[Tweelings]] en [[Kreeft (steernsbeeld)|Kreeft]].
 * De zommerzunnewende valt in dizze maond, rond de 21ste. 
-* Der bint gien aandre maonden die op dezölfde dag van de weke beginnen as [[juni]].
+* Der bint gien aandre maonden die op dezölfde dag van de weke beginnen as juni.
 * Een kolde periode in juni wordt ''schaopscheerderskou'' nuumd.
 
 == Weerstaotistieken maond juni in Nederlaand ==
