corr using [[Project:AWB|AWB]]

--- a/Klemboon.mw
+++ b/Klemboon.mw
@@ -33,17 +33,17 @@ De [[voedingsweerdedeklerasie|voedingsweerde]] van 100 gram varse klembonen is:
 |-----
 | [[Vet]] || 	    0,2  gram 	 || 
 |-----
-| [[Vitemine C]] || 	    15   mg 	 ||
+| [[Vitemine C]] || 	    15&nbsp;mg 	 ||
 |-----
-| [[Caroteen]] || 	    0,20   mg 	 ||
+| [[Caroteen]] || 	    0,20&nbsp;mg 	 ||
 |-----
-| [[Vitemine B1]] || 	    0,07 mg 	 ||
+| [[Vitemine B1]] || 	    0,07&nbsp;mg 	 ||
 |-----
-| [[Vitemine B2]] || 	    0,06 mg 	 ||
+| [[Vitemine B2]] || 	    0,06&nbsp;mg 	 ||
 |-----
-| [[Calcium]] || 	    40   mg 	 ||
+| [[Calcium]] || 	    40&nbsp;mg 	 ||
 |-----
-| [[Iezer]] 	        || 	    0,5  mg 	
+| [[Iezer]] 	        || 	    0,5&nbsp;mg 	
 |
 |}
 
@@ -70,9 +70,9 @@ De klemboon kan an-etas wonnen deur rolmozaïekvirus, zwarte vaotziekte, scharpm
 **''snipperbonen'' ([[Attem]])
 **''scheermesjes'', ''-messies'', ''-messen''
 **''klamppinnen'' ([[Lieren]])
-**'''''[[klemboon]]''''' ([[Nunspeet]])
+**'''''klemboon''''' ([[Nunspeet]])
 **''dikke jennen'' ([[Apeldoorne (stad)|Apeldoorne]])
 **''taobassen'', ''taobasten'' ([[Apeldoorne (stad)|Apeldoorne]])
 
-[[Kategorie:West-Veluws_artikel]]
+[[Kategorie:West-Veluws artikel]]
 [[Kategorie:Greunte]]
